# crewcontext

./: .env.example  .gitignore  .gitmessage  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  temp.b64
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  workflow.yml
crewcontext/: __init__.py  context.py  encryption.py  health.py  logging_config.py  metrics.py  models.py  router.py  schema.py  secrets.py  security.py
crewcontext/demos/: vendor_discrepancy.py
crewcontext/projection/: __init__.py  neo4j.py  projector.py
crewcontext/store/: base.py  postgres.py
docs/: api-reference.md  concepts.md  examples.md  getting-started.md
examples/clawlite_integration/: SKILL.md  crewcontext_tools.py  demo_two_agents.py  quickstart.py
src/crewcontext/: __init__.py  cli.py  context.py  utils.py
src/crewcontext/demos/: __init__.py
src/crewcontext/store/: __init__.py
src/crewcontext/store/migrations/: 0001_init.sql
tests/: __init__.py  conftest.py  test_models.py  test_observability.py  test_postgres_store.py  test_router.py  test_security.py  test_temporal_asof.py
